# msi-center-linux

./: Cargo.toml  README.md  msi-center-gui.sh
debian/DEBIAN/: control  postinst  prerm
debian/usr/share/applications/: msi-center-linux.desktop
debian/usr/share/polkit-1/actions/: com.msi-center-linux.policy
src/: gui.rs  main.rs
src/config/: mod.rs
src/ec/: mod.rs
src/fan/: mod.rs
src/scenario/: mod.rs
