[package]
name = "msi-center-linux"
version = "0.1.0"
edition = "2024"
description = "MSI Center clone for Linux - Fan control and user scenarios"
authors = ["Dasun Sanchitha"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
nix = { version = "0.27", features = ["fs", "ioctl", "user"] }
libc = "0.2"
dirs = "5.0"
colored = "2.1"
log = "0.4"
env_logger = "0.10"
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
rfd = "0.15"

[[bin]]
name = "msi-center"
path = "src/main.rs"

[[bin]]
name = "msi-center-gui"
path = "src/gui.rs"
